UML-Editor 3.6.2 (2015-04-xx) 
----------------------------------
- improved label "Language of model presentation"
- iliimp: import GENERIC

UML-Editor 3.6.1 (2015-01-30) 
----------------------------------
- bug iliexp: failed to sort ModelDef inside one ili-file according to dependencies/imports
- ili2c-4.5.7

UML-Editor 3.6.0 (2014-12-30) 
----------------------------------
- iliimp: unwrap multivalue struct attrs to normal uml attrs
- iliimp: import interlis struct attrs as uml attrs
- bug iliimp: keep DomainRef to DomainDef with BOOLEAN, HALIGNMENT, VALIGNMENT, NAME, URI
- iliexp: export multivalue attrs with ili2.4 syntax
- bug iliimp: failed to import SET CONSTRAINT
- bug iliimp: failed to import ViewDef/Selection
- bug iliimp: failed to import ViewDef/ALL OF
- ili2c-4.5.6

UML-Editor 3.5.2 (2013-09-04) 
----------------------------------
- bug: fixed exception if reading some uml-files (because Name of TaggedValue is not yet set)

UML-Editor 3.5.1 (2013-09-02) 
----------------------------------
- bug iliexp: fixed NullPointerException if export to an illegal path
- keep ordering of ModelDef/IMPORTS
- keep ordering of TaggedValues
- keep ordering of Constraints
- bug: keep documentation of constraints after classdef edits 
- ili2c-4.4.14

UML-Editor 3.5.0 (2013-04-06) 
----------------------------------
- added fields furtherInformation, technicalContact, IDGeoIV on ModelDef dialog

UML-Editor 3.4.3 (2012-11-12) 
----------------------------------
- fixed encoding of properties/translations in sebase

UML-Editor 3.4.2 (2012-08-08) 
----------------------------------
- fixed encoding of properties/translations
- ili2c-4.4.7

UML-Editor 3.4.1 (2012-01-26) 
----------------------------------
- bug gui: encoding of resources in sebase corrected
- bug iliimp: wrong multiplicity if MANDATORY BOOLEAN

UML-Editor 3.4.0 (2011-12-29) 
----------------------------------
- FILE FORMAT CHANGED: 