@@ -1,6 +1,8 @@
 UML-Editor 3.6.2 (2015-04-xx) 
 ----------------------------------
 - improved label "Language of model presentation"
+- removed accuracy combobox from AREA/SURFACE panel
+
 - iliimp: import GENERIC
 
 UML-Editor 3.6.1 (2015-01-30) 
